--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -1,8 +1,8 @@
 \chapter{The MicroBooNE Experiment}\label{ch:microboone}
 The purpose of this chapter is to discuss and understand the details of the MicroBooNE detector. A thorough understanding of MicroBooNE and the technology behind liquid argon time projection chambers is important for understanding results as well as understanding how images were made for use in deep learning efforts that will be outlined in later chapters.   
 
-\section{Introduction}
-The experimental study of neutrinos is central to FermiLab's scientific program and offers the possibility for exciting discoveries that could reshape our understanding of the universe. Liquid Argon Time Projection Chambers (LArTPCs) are an exciting detector technology that provide excellent imaging and particle identification, and are now being used to study neutrinos. In these detectors, liquid argon (LAr) is the medium used to detect neutrinos. When a neutrino interacts with an argon atom, the charged particles that are produced ionize the LAr as they travel away from the interaction. By placing a uniform electric field throughout the LAr, the ionization is made to drift towards a set of anode planes, which consist of wires spaced very closely together collecting the ionized charge, which is subsequently read out by electronics connected to the anode wires. The collected ionization creates a spatial image of what happened in the detector on each anode plane. The $\nu-Ar$ interaction also produces scintillation light which is collected by photomultiplier tubes (PMTs) which allows the exact time of the neutrino interaction to be determined. The drift time of the ionization relative to the time of the original signal allows the signal to be projected back along the drift coordinate, hence the name LArTPC. Having very small distances between each wire within an anode plane allows for very fine granularity and detail to be captured, and having multiple wire planes at different angles coupled with exact timing of neutrino interaction, provides independent two-dimensional views that can be combined into a three dimensional picture of the interaction. Once the charge signal is created on the anode planes, software analysis packages identify particles in the detector by using deposited energy on the wires along their track length. 
+\section{Liquid argon time projection chambers}
+Liquid Argon Time Projection Chambers (LArTPCs) are an exciting detector technology that provide excellent imaging and particle identification, and are now being used to study neutrinos. The Time Projection Chamber (TPC) was first invented by Nygren in 1974 \cite{nygren} and the proposal for a LArTPC for neutrino physics was made by Rubbia \cite{rubbia} in 1977 with the ICARUS collaboration implementing this concept\cite{icaraus}. A LArTPC is a three-dimensional imaging detector that uses planes of wires at the edge of an active volume to read out an interaction. When a neutrino interacts with an argon atom, the charged particles that are produced ionize the LAr as they travel away from the interaction. By placing a uniform electric field throughout the LAr volume, the ionization is made to drift towards a set of anode planes, which consist of wires spaced very closely together collecting the ionized charge, which is subsequently read out by electronics connected to the anode wires. The collected ionization creates a spatial image of what happened in the detector on each anode plane. The $\nu-Ar$ interaction also produces scintillation light which is collected by photomultiplier tubes (PMTs) which allows the exact time of the neutrino interaction to be determined. The drift time of the ionization relative to the time of the original signal allows the signal to be projected back along the drift coordinate, hence the name LArTPC. Having very small distances between each wire within an anode plane allows for very fine granularity and detail to be captured, and having multiple wire planes at different angles coupled with exact timing of neutrino interaction, provides independent two-dimensional views that can be combined into a three dimensional picture of the interaction. Once the charge signal is created on the anode planes, software analysis packages identify particles in the detector by using deposited energy on the wires along their track length. 
 
 MicroBooNE (Micro Booster Neutrino Experiment) is a ~89 T active volume (180 T total mass) LArTPC which is then inserted into a cylindrical crysotat on axis of the Booster Neutrino Beam (BNB) stationed at Fermilab in Batavia, Illinois. The main components of MicroBooNE will be detailed in the upcoming sections. MicroBooNE is also an R\&D detector that can be scaled up to a significanlty larger size, such as Deep Underground Neutrino Experiment (DUNE) which is roughly 40 kT compared to MicroBooNE at 180T \cite{dune}. Understanding LArTPC technology and detector physics is necessary to build a LArTPC the size of DUNE, and MicroBooNE has made many advances in developing this technology\cite{noisechar} \cite{michel}. 
 \section{Time Projection Chamber}
