--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -2,10 +2,12 @@
 The purpose of this chapter is to discuss and understand the details of the MicroBooNE detector. A thorough understanding of MicroBooNE and the technology behind liquid argon time projection chambers is important for understanding results as well as understanding how images were made for use in deep learning efforts that will be outlined in later chapters.   
 
 \section{Liquid argon time projection chambers}
-Liquid Argon Time Projection Chambers (LArTPCs) are an exciting detector technology that provide excellent imaging and particle identification, and are now being used to study neutrinos. The Time Projection Chamber (TPC) was first invented by Nygren in 1974 \cite{nygren} and the proposal for a LArTPC for neutrino physics was made by Rubbia \cite{rubbia} in 1977 with the ICARUS collaboration implementing this concept\cite{icaraus}. A LArTPC is a three-dimensional imaging detector that uses planes of wires at the edge of an active volume to read out an interaction. When a neutrino interacts with an argon atom, the charged particles that are produced ionize the LAr as they travel away from the interaction. By placing a uniform electric field throughout the LAr volume, the ionization is made to drift towards a set of anode planes, which consist of wires spaced very closely together collecting the ionized charge, which is subsequently read out by electronics connected to the anode wires. The collected ionization creates a spatial image of what happened in the detector on each anode plane. The $\nu-Ar$ interaction also produces scintillation light which is collected by photomultiplier tubes (PMTs) which allows the exact time of the neutrino interaction to be determined. The drift time of the ionization relative to the time of the original signal allows the signal to be projected back along the drift coordinate, hence the name LArTPC. Having very small distances between each wire within an anode plane allows for very fine granularity and detail to be captured, and having multiple wire planes at different angles coupled with exact timing of neutrino interaction, provides independent two-dimensional views that can be combined into a three dimensional picture of the interaction. Once the charge signal is created on the anode planes, software analysis packages identify particles in the detector by using deposited energy on the wires along their track length. 
-
+Liquid Argon Time Projection Chambers (LArTPCs) are an exciting detector technology that provide excellent imaging and particle identification, and are now being used to study neutrinos. The Time Projection Chamber (TPC) was first invented by Nygren in 1974 \cite{nygren} and the proposal for a LArTPC for neutrino physics was made by Rubbia \cite{rubbia} in 1977 with the ICARUS collaboration implementing this concept\cite{icaraus}. A LArTPC is a three-dimensional imaging detector that uses planes of wires at the edge of an active volume to read out an interaction. When a neutrino interacts with an argon atom, the charged particles that are produced ionize the LAr as they travel away from the interaction. By placing a uniform electric field throughout the LAr volume, the ionization is made to drift towards a set of anode planes, which consist of wires spaced very closely together collecting the ionized charge, which is subsequently read out by electronics connected to the anode wires. The collected ionization creates a spatial image of what happened in the detector on each anode plane. The position resolution of the interaction along the beam direction (perpendicular to drift direction) relies on the wire pitch, while the resolution in drift direction is dependent on the timing resolution of the electronics used and the longitudinal diffusion in the volume. The drift time of the ionization relative to the time of the original signal allows the signal to be projected back along the drift coordinate, hence the name LArTPC. Having very small distances between each wire within an anode plane allows for very fine granularity and detail to be captured, and having multiple wire planes at different angles provides independent two-dimensional views that can be combined into a three dimensional picture of the interaction. Once the charge signal is created on the anode planes, software analysis packages identify particles in the detector by using deposited energy on the wires along their track length. 
+The 30 year development of the ICARUS detector has led to LArTPCs being used as cosmic ray \cite{lartpc_cosmic}, solar neutrino \cite{lartpc_solar} and accelerator neutrino \cite{lartpc_accelerator} detectors. The ArgoNeuT experiment at Fermilab was the first United States based liquid argon neutrino program that has since produced short-baseline $\nu-Ar$ cross-section measurements in the NUMI beamline \cite{argoneut}. The MicroBooNE experiment is the second experiment in the US based LArTPC neutrino program and will be discussed thoroughly in the next sections.  
+The next phases of the liquid argon neutrino program are under way and are the Fermilab Short Baseline Neutrino (SBN) program \cite{sbn} and the Deep Underground Neutrino Experiment (DUNE) \cite{dune}. The SBN program will include three LArTPC detectors, including the MicroBooNE detector, on the Booster Neutrino Beam (BNB) to do multiple-baseline oscillation measurements. The detector closest to the beam will be the 40 ton Short Baseline Neutrino Detector (SBND)\cite{sbnd} at 150 m and the detector furthest is the 600 ton ICARUS T600 \cite{icarus_t600} detector positioned at 600 m. The DUNE collaboration will deliver a 30 GeV neutrino beam 1300 km from Fermilab to a 34 kiloton LArTPC detector at Homestake, SD. DUNE will study the leptonic CP phase, $\delta_{cp}$, as well as measure neutrino and antineutrino oscillations. 
+\section{The MicroBooNE Time Projection Chamber}The $\nu-Ar$ interaction also produces scintillation light which is collected by photomultiplier tubes (PMTs) which allows the exact time of the neutrino interaction to be determined.
 MicroBooNE (Micro Booster Neutrino Experiment) is a ~89 T active volume (180 T total mass) LArTPC which is then inserted into a cylindrical crysotat on axis of the Booster Neutrino Beam (BNB) stationed at Fermilab in Batavia, Illinois. The main components of MicroBooNE will be detailed in the upcoming sections. MicroBooNE is also an R\&D detector that can be scaled up to a significanlty larger size, such as Deep Underground Neutrino Experiment (DUNE) which is roughly 40 kT compared to MicroBooNE at 180T \cite{dune}. Understanding LArTPC technology and detector physics is necessary to build a LArTPC the size of DUNE, and MicroBooNE has made many advances in developing this technology\cite{noisechar} \cite{michel}. 
-\section{Time Projection Chamber}
+
 MicroBooNE's Time Projection Chamber (TPC) is 10.3 m long (beamline direction), 2.3 m high and 2.5 m wide (which corresponds to the drift distance). The TPC is shown in figure \ref{fig:tpc}. MicroBooNE is the largest LArTPC currently running in the world\cite{microboone}. This LArTPC has 3 wire planes: 1 plane that collects the ionization in the wires and is $0^{\circ}$ to the virtical with 3456 wires spaced 3 mm apart, and 2 planes where the ionization drifts passed and induces a signal at $\pm 60^{\circ}$ to the vertical each with 2400 wires also spaced 3 mm apart. Each plane has a spacing also of 3 mm from eachother. The wires are then connected to detector specific circuit boards (ASICS) that are submered and operate inside liquid argon. The first two planes are the induction planes and the last is the collection. The electric field of the TPC is created using 64 stainless steel tubes shaped into rectangules around the TPC and held in place by G10 to form a field cage. The cathode is charged at a high voltage of -70 kV and this voltage is stepped down across the field cage tubes using a voltage divider chain with an equivalent resitance of 240 $M\ohm$ between the tubes. The field cage tubes are separated by 4 cm from center to center. 
 \section{Light Collection System}
 The light collection system is a crucial part for 3D reconstruction of particle interactions in the LArTPC. It is possible to reconstruct interactions using just the wire signals, but without the initial timing (t0) of an event, it is impossible to position the event along the drift direction. When a particle interaction occurs, the scintillation light created propogates within nanoseconds to the light collection system compared to the milliseconds it takes the ionized electrons from the interaction to reach the anode wire planes. Therefore we can precisely know where along the drift direction the particle interaction first took place. The scintillation light is also localized, so combining the PMT information with the wire plane information allows for cosmic background rejection happening outside the beam timing window.  
