--- a/neutrinoID.tex
+++ b/neutrinoID.tex
@@ -1,4 +1,4 @@
-\chapter{Finding the first Neutrinos in MicroBooNE} \label{ch:neutrinoID}
+\chapter{Neutrino Identification: Finding MicroBooNE's first Neutrinos} \label{ch:neutrinoID}
 Chapter about your neutrinoID here.
 
 \clearpage
