--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -19,5 +19,8 @@ Both the light collection system and the TPC create analog signal that is read o
 \section{MicroBooNE's Physics Goals} 
 \subsection{The low-energy excess}
 \subsection{Cross sections}
+MicroBooNE's neutrino cross-section program will be the first $\nu-Ar$ cross-section in the 1 GeV energy range and one of only a few cross-section measurements of $\nu-Ar$ in the world. This has significance in part because of the large scale LArTPCs slated for construction over the next decade \cite{dune} \cite{SBN}. 
+
+
 \subsection{Astroparticle physics}
 \subsection{Liquid argon detector development}
