--- a/example.tex
+++ b/example.tex
@@ -112,9 +112,10 @@ Syracuse, New York
   \input{beam}
   \input{neutrinoID}
   \input{meas}
-  \input{mupiseparation}
+  %\input{mupiseparation}
   \input{cnn}
-  \input{syr_cluster}
+  %\input{syr_cluster}
+  \input{cnn_train}
   \input{cnn_results}
   \input{data}
   \input{selImodcompare}
