--- a/meas.tex
+++ b/meas.tex
@@ -24,3 +24,5 @@ The selection begins with a cut that requires an optical flash greater than 50 p
 \label{fig:distributions}
 \caption{\ref{fig:track} Track range distribution for selection I. The track range is defined as the 3D distance between the start and end of the muon candidate track. No data is shown below 75 cm due to the track length cut described previously. \ref{fig:eff} Efficiency of the selected events by process quasi-elastic (QE), resonant (RES), and deep-inelastic (DIS). Statistical uncertainty is shown in the bands and the distributions are a function of true muon momentum. The rise of the efficiency between 0 GeV and 0.5 GeV is due to the minimum track length cut and the decreasing efficiency for higher momentum tracks is caused by the containment requirement.} 
 \end{figure}
+
+\section{The importance of $\mu/\pi$ separation}
