--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -1,82 +1,6 @@
-
-\chapter{Using Convolutional Neural Networks to separate ${\mu}'s$ from ${\pi}'s$}\label{ch:cnn_results}
-
-
-The work shown in these next sections are based on the previous work done described in \cite{priorwork}. That CNN (now referred to as CNN1075) was trained using single generated isotropic muons and pions from 0-2 GeV energy range. 1,075 muons and pions were used to train the network and 1,075 $\mu/\pi$ were used as a validation set. The accuracy is how well CNN1075 is doing by epoch and was 74.5\%. The loss is gradient descent or minimization of the error of the weights and biases used in each neuron of each layer of CNN1075 and was 58\% with a trend sloping downwards on the loss curve as well as a trend sloping upward in the accuracy curve. Due to the depth of the neural network framework, it was necessary to train with a larger dataset and for more epochs, however, the downward slope of the loss curve is an indication that once trained for longer with a higher training sample, neural networks can be used for $\mu/\pi$ separation. Updates in the image making and downsampling algorithm were made to fix issues that arose in CNN1075. 
-
-\section{Image Making Scheme}\label{image_making} 
-
-The $\mu/\pi$ image dataset used to train and test the second CNN (now referred to as CNN10000) was created using single generated isotropic muons and pions from 0-2 GeV energ range. 10,000 muons and 10,000 pions were used for training and testing split 50\%. The images were created based on wire number and time tick in the collection plane. Uboonecode v06{\_}23{\_}00 was used instead of v05{\_}08{\_}00 which was used previously. The wire signal was the raw ADC value after noise filtering. Each collection plane grayscale image was 3456x1280x1 where 5 time ticks were pooled into 1 bin which is different than the previous dataset and was implemented due to the fact that the time ticks of an event went from 9400 to 6400 with the change of uboonecode version. The grayscale color standard is 8bit therefore the ADC value of wire and time tick was also downsampled due to the 12bit ADC value MicroBooNE has. To do this, the highest ADC pixel in the image was found and then this was divided by the rest placing all pixel values between 0-1. From there, all pixel values are then multiplied by 255. All images were made using a LArSoft module. Once the images were created, using and image manipulation framework called OpenCV images were read into a numpy array and cropped to the region of interest by only keeping rows and columns where all ADC values are higher than 0 and then resized it to 224x224 using OpenCV's resize function. This downsampling of ADC values creates a problem of information loss for example, a proton which is highly ionizing will have the same brightness as a minimum ionizing muon by virtue of how the images are created. Creating images that thoroughly depict the ADC scale for use in $dE/dx$ particle identification has been implemented and retraining of CNN is underway.
-Issues that arose in CNN1075 that were fixed in CNN10000 include zero-padding images in X and Y that are smaller than 224X224 to eliminate over-zooming effect and fixing a bug that shifted pixels separated by a dead-wire region. 
-
-Images were also made from events that passed the cc-inclusive selection 1 filter right before the 75 cm track length cut and were classified using the CNN10000. The dataset used to create these images is the same one used in \cite{cc-inclusive}, prodgenie{\_}bnb{\_}nu{\_}cosmic{\_}uboone{\_}mcc7{\_}reco2. These images were created using information from the track candidate that passed the filter. Only wire number and time ticks associated to the track candidate were drawn on the image to mimic a single particle generated image. These images were then classified using CNN10000. Two approaches were taken in making these images. The first was using the image normalization above where the maximum pixel in each image is used as a normalization constant to get all pixels between 0-1 then multiply all pixels by 255. As described above, this is the incorrect way to normalize; it should be normalized by dataset not by event, which is the second way the images were created. The results of CNN10000 performance are shown in section \ref{research approach}. 
-
-
-\section{Convolutional Neural Network Training}\label{research approach}
-The hyperparameters used for CNN10000 are shown. The batch size for the training and testing as well as the test iter were chosen to encompass the whole training/testing image set when doing accuracy/loss calculations. To do this, multiplying the test iter by the test batch size give you the amount of images used when calculating accuracy/loss curves. For reference, the accuracy and loss are defined as well. 
-
-
-\begin{itemize}
- \item \verb|train_batch_size: 100|
- \item \verb|test_batch_size: 100|
- \item \verb|test_iter: 100|
- \item \verb|test_interval: 100|
- \item \verb|base_lr: 0.001|
- \item \verb|lr_policy: "step"|
- \item \verb|gamma: 0.1|
- \item \verb|stepsize: 1000|
- \item \verb|display: 100|
- \item \verb|max_iter: 10000|
- \item \verb|momentum: 0.99|
- \item \verb|weight_decay: 0.0005|
- \item \verb|snapshot: 100|
-\item Accuracy: How often the CNN predicts the truth over total number of images
-\item Loss: Error between truth and prediction. Minimize loss by gradient descent to update weights and biases of CNN
-\end{itemize}
-
-The same architecure that was used to train CNN1075 was employed on CNN10000, Imagenet. Caffe \cite{caffe} was the software package used for both CNNs. The differences include batch size and test{\_}iter and momentum to account for the larger dataset. Both CNNs were trained on a CPU machine, Syracuse01. Further training will be done on a GPU cluster stationed at Syracuse University. Figure \ref{fig:loss_accuracy} shows the loss and accuracy of CNN10000. There is around a 10\% increase in accuracy from CNN1075 to CNN10000, 85\%, and around a 20\% decrease in loss, 36\%.      
-
-\begin{figure}[htp!]
-\centering
-\includegraphics[scale=.55]{figs/acc_loss_10000_062117.png}
-\caption{Accuracy vs. Loss of ImageNet 2-output $\mu/\pi$ sample consisting of ~10000 images each.} 
-\label{fig:loss_accuracy}
-\end{figure}
-
-\begin{figure}[htp!]
-\centering
-	\begin{subfigure}[b]{.4\textwidth}
-	\includegraphics[width=\textwidth,height=3in]{figs/train_confusion-9-14-16.png}
-	\caption{Confusion Matrix showing Accuracy of CNN using training data}
-	\label{fig:confusion}
-	\end{subfigure}
-	\quad
-	\begin{subfigure}[b]{.4\textwidth}
-	\includegraphics[width=\textwidth,height=3in]{figs/val_confusion_9-14-16.png}
-	\caption{Confusion Matrix showing Accuracy of CNN using testing data}
-	\label{fig:confusion_test}
-	\end{subfigure}
-	\quad
-	\begin{subfigure}[b]{\textwidth}
-	\includegraphics[width=\textwidth,height=2.5in]{figs/mitch_hw.png}
-	\caption{Probability plot of muons and pions from testing set. Images surrounding histogram are a random event from lowest bin and highest bin for each particle.}
-	\label{fig:prob_plot}
-	\end{subfigure}
-\caption{Description of confusion matrix varables: False pion rate = $false \pi/ total \pi$ True pion rate = $true \pi/total \pi$ Accuracy = $(true \pi rate + true \mu rate)/2$ Pion prediction value = $true \pi/(true \pi + false \pi)$ Muon prediction value = $true \mu/(true \mu + false \mu)$ \ref{fig:prob_plot} The probability plot includes muons and pions that are classified as primary particles.}
-\label{fig:CNN_train}
-\end{figure}
-
-Figure \ref{fig:CNN_train} show a breakdown of $\mu/\pi$ separation for CNN10000. It also shows the network is not being overtrained due to the Accuracy of both the training and testing datasets being within .01\% of eachother. The CNN is doing a very good job of classifying true muons as muons, and our loss increase from CNN1075 is due to the increase in accuratly classifing pions as pions. 
-
-
-%\begin{figure}[htp]
-%\centering
-%\includegraphics[width=.9\linewidth]{Purity_numbers.png}
-%\caption{ Signal and background event numbers at final selection level estimated from a BNB+Cosmic sample and Cosmic only sample normalized to $5*10^{19}$ POT. The last column gives the fraction of this signal or background type to the total 2604 selected events.} 
-%\label{fig:puritytable}
-%\end{figure}
-
-\section{Classification of MC data using Selection I Original CC-Inclusive Filter}\label{sel1orig}
+\chapter{Results of Convolutional Neural Networks on particles \textcolor{red}{\textbf{WORKING TITLE}}}\label{ch:cnn_results}
+\section{Classification using CNN10000}
+\subsection{Classification of MC data using Selection I Original CC-Inclusive Filter}\label{sel1orig}
 
 \begin{figure}[htp!]
 \centering
@@ -149,7 +73,7 @@ The next step that was taken was to use CNN10000 to classify track candidate ima
 
 Figures \ref{fig:confusion_wrongnorm}, \ref{fig:prob_wrongnorm}, \ref{fig:confusion_rightnorm} and \ref{fig:prob_rightnorm} show the accuracy and $\mu/\pi$ separation of both the correct and incorrect normalized images. The confusion matrices are only composed of $\mu/\pi$ data. Other particles passed the cc-inclusive filter before the 75 cm track length cut and were all mis-id'ed as muons. Since CNN10000 has not seen any particles other than muons and pions, it makes sense that those get mis-id'ed. Figures \ref{fig:prob_wrongnorm} and \ref{fig:prob_rightnorm} don't have $\mu/\pi$separation comparable to \ref{fig:prob_plot}, but \ref{fig:prob_wrongnorm} does skew to higher probabilities compared to \ref{fig:prob_rightnorm}. This is to be expected and further work on quantifying the performance of CNN10000 should use the incorrect image making normalization. It is also expected that the separation isn't as defined as the testing dataset for CNN10000. CNN10000 was trained and tested using single particle muons and pions and the track candidate dataset come from BNB+Cosmic events, not to mentions all track candidates have passed the cc-inclusive filter that tags "muon-like" tracks therefore the pions in this sample look much closer in muon topology than the network has seen. Also, these images were made from wire and time ticks associated to hits from the track candidate that passed the cc-inclusive filter. This is different from the training images where a bounding box was drawn over the total $\mu$ or $\pi$ interaction. Spurious energy deposition from a $\pi-Ar$ interaction is most likely not included in the BNB+Cosmic images due to the tracking algorithm. To remedy this, the neural network needs to see more "muon-like" pions and muons and pions from a neutrino interaction passing the cc-inclusive filter as well as a larger particle variety including protons, photons and electrons. Although $\mu/\pi$ separation is lacking, CNN10000 does an excellent job of classifying muons and using higher CNN probability can increase purity. Figures \ref{fig:track_wrongnorm}, \ref{fig:track_rightnorm}, \ref{fig:momentum_wrongnorm} and \ref{fig:momentum_rightnorm} show the track and momentum distributions for these two datasets. In both sets you have an increase in data in the bin below 75 cm and at bins below 0.5 GeV. These distributions were made with events classified with 70\% probability of being a muon regardless of true particle type. 
 
-\section{Classification of MC data using Selection I Modified CC-Inclusive Filter}
+\subsection{Classification of MC data using Selection I Modified CC-Inclusive Filter}
 
 \begin{figure}[htp!]
 \centering
@@ -402,9 +326,10 @@ Lastly, figure \ref{fig:sel1mod_cnnperformance} shows a more representative perf
 \label{fig:sel1mod_cnnperformance}
 \end{figure}
 
-\section{Conclusions and Future Work}
+\subsection{Conclusions and Future Work}
 
-It was shown that even though CNN10000 was trained with single particle generated muons and pions, it performs fairly well at classifying track candidate images from BNB+Cosmic events. Events have been regained below the 75 cm track length cut and the momentum and track range distributions have similar shapes to the distributions of Selection I original and modified. Efficiencies and purities were calculated for selection I modified events before 75 cm track length cut  with the CNN at 83\% probability and are 14\% and 62\% respectively. Although the CNN doesn't have separation between muons and pions and although all particles passing CNN are classified as muon, increasing CNN probability allows us to increase the purity as well as maintain an efficiency comparable to the 75 cm track length cut all while recovering events below that 75 cm cut. Out of the 6142 events that passed the CNN @ 83\% 1470 events were below the 75 cm cut, a recovery of 3.3\% of data with an purity of 15\%. Although these numbers are low, it is an improvement from the selecion I modified in both total efficiency and purity and an increase in phase space by recovering these events. The next steps are to train two additional neural networks. One with track candidate muon and pion images originating from BNB+Cosmic events and the second whole $CC_{\mu}/NC_{\pi}$ events to gauge CNN performance. These trainings are underway.
+It was shown that even though CNN10000 was trained with single particle generated muons and pions, it performs fairly well at classifying track candidate images from BNB+Cosmic events. Events have been regained below the 75 cm track length cut and the momentum and track range distributions have similar shapes to the distributions of Selection I original and modified. Efficiencies and purities were calculated for selection I modified events before 75 cm track length cut  with the CNN at 83\% probability and are 14\% and 62\% respectively. Although the CNN doesn't have separation between muons and pions and although all particles passing CNN are classified as muon, increasing CNN probability allows us to increase the purity as well as maintain an efficiency comparable to the 75 cm track length cut all while recovering events below that 75 cm cut. Out of the 6142 events that passed the CNN @ 83\% 1470 events were below the 75 cm cut, a recovery of 3.3\% of data with an purity of 15\%. Although these numbers are low, it is an improvement from the selecion I modified in both total efficiency and purity and an increase in phase space by recovering these events. 
 
-\clearpage
-
+\section{Classification using CNN100000}
+All future classifications will be done using Selection I Modified CC-Inclusive Filter because it has a higher efficiency and purity than Selection I Original CC-Inclusive Filter.
+\subsection{Classification of MC data using Selection I Modified CC-Inclusive Filter}
