--- a/example.tex
+++ b/example.tex
@@ -110,7 +110,7 @@ Syracuse, New York
   \input{intro}
   \input{neutrinos}
   \input{MicroBooNE}
-  \input{beam}
+  %\input{beam}
   \input{neutrinoID}
   \input{meas}
   %\input{mupiseparation}
